traces/bug_177.txt
src/medit/path.c:146: error: RESOURCE_LEAK
  resource of type `_IO_FILE` acquired by call to `fopen()` at line 143, column 10 is not released after line 146, column 26.
Showing all 13 steps of the trace


src/medit/path.c:131:1: start of procedure pathLoad()
129.   }
130.   
131. > int pathLoad(char *file,pScene sc) {
132.     FILE      *in;
133.     char      *ptr,data[256];

src/medit/path.c:135:3: 
133.     char      *ptr,data[256];
134.   
135. >   strcpy(data,file);
136.     ptr = (char *)strstr(data,".mesh");
137.     if ( ptr )  *ptr = '\0';

src/medit/path.c:136:3: 
134.   
135.     strcpy(data,file);
136. >   ptr = (char *)strstr(data,".mesh");
137.     if ( ptr )  *ptr = '\0';
138.     if ( !strstr(data,".path") )

src/medit/path.c:137:8: Taking false branch
135.     strcpy(data,file);
136.     ptr = (char *)strstr(data,".mesh");
137.     if ( ptr )  *ptr = '\0';
              ^
138.     if ( !strstr(data,".path") )
139.       strcat(data,".path");

src/medit/path.c:138:9: Taking true branch
136.     ptr = (char *)strstr(data,".mesh");
137.     if ( ptr )  *ptr = '\0';
138.     if ( !strstr(data,".path") )
               ^
139.       strcat(data,".path");
140.     in = fopen(data,"r");

src/medit/path.c:139:5: 
137.     if ( ptr )  *ptr = '\0';
138.     if ( !strstr(data,".path") )
139. >     strcat(data,".path");
140.     in = fopen(data,"r");
141.     if ( !in ) {

src/medit/path.c:140:3: 
138.     if ( !strstr(data,".path") )
139.       strcat(data,".path");
140. >   in = fopen(data,"r");
141.     if ( !in ) {
142.       sscanf(data,"DEFAULT.path");

src/medit/path.c:141:9: Taking true branch
139.       strcat(data,".path");
140.     in = fopen(data,"r");
141.     if ( !in ) {
               ^
142.       sscanf(data,"DEFAULT.path");
143.       in = fopen(data,"r");

src/medit/path.c:142:5: 
140.     in = fopen(data,"r");
141.     if ( !in ) {
142. >     sscanf(data,"DEFAULT.path");
143.       in = fopen(data,"r");
144.       if ( !in )  return(0);

src/medit/path.c:143:5: 
141.     if ( !in ) {
142.       sscanf(data,"DEFAULT.path");
143. >     in = fopen(data,"r");
144.       if ( !in )  return(0);
145.     }

src/medit/path.c:144:11: Taking false branch
142.       sscanf(data,"DEFAULT.path");
143.       in = fopen(data,"r");
144.       if ( !in )  return(0);
                 ^
145.     }
146.     if ( !quiet )  fprintf(stdout,"  Loading %s\n",data);

src/medit/path.c:146:9: Taking true branch
144.       if ( !in )  return(0);
145.     }
146.     if ( !quiet )  fprintf(stdout,"  Loading %s\n",data);
               ^
147.   
148.     return(1);

src/medit/path.c:146:18: 
144.       if ( !in )  return(0);
145.     }
146. >   if ( !quiet )  fprintf(stdout,"  Loading %s\n",data);
147.   
148.     return(1);
